--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fetch-register",
   "version": "1.0.0",
   "description": "Fetch just works",
+  "homepage": "https://github.com/codler/fetch-register",
   "main": "index.js",
   "scripts": {},
   "keywords": [
